[package]
name = "bicliques"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tindex = "0.5"
cfg-if = "1.0"

[dev-dependencies]
iai = "0.1"

[profile.release]
debug = true

[[bench]]
name = "small"
harness = false